--- a/type/index.html
+++ b/type/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <head>
-	<title>A website is never finished</title>
+	<title>Type</title>
+	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
+
 </head>
 <body>
-	<p>Please check back later.</p>
+	<main>
+		<p class="side-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in felis ac eros pulvinar tincidunt id at eros. Ut maximus nisl et volutpat viverra. Cras feugiat turpis quis diam sagittis sagittis. In quis pharetra diam, facilisis convallis massa.</p> 
+		
+		<p class="white-text">Pellentesque ac vestibulum lectus. Fusce nec mi aliquam, cursus ipsum eget, egestas lacus. Aenean scelerisque, tellus eget tempor efficitur, mi sapien blandit diam, sed convallis arcu mi quis lorem. Cras quis dignissim lorem, id maximus mi. Sed lobortis interdum dui, eget sodales quam ultricies in. Duis ut feugiat urna. Mauris consectetur placerat nunc, vitae vehicula metus consectetur at. Nam porttitor ligula lacus, vel aliquet mi hendrerit ac. Pellentesque et dictum ex. Aliquam pulvinar ultrices accumsan. Mauris ultrices, elit vitae ornare mattis, purus urna blandit sem, quis pharetra diam elit ut mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam arcu turpis, vehicula ac dolor et, tempor blandit nunc. Curabitur vel enim vitae velit vehicula aliquet. Nam urna augue, elementum sed felis non, dictum suscipit arcu. Sed rhoncus eu ante in tincidunt. Donec ultrices eget massa et porttitor. Aenean sagittis mattis lacus non varius. Aenean ac urna quis ante lacinia pulvinar eget sed ligula.</p>
+
+		<p class="lime-time">Quisque scelerisque, lacus nec vehicula interdum, elit nisl viverra velit, sed semper quam nisl eget justo. Vestibulum id pretium felis, bibendum facilisis risus. Donec sagittis bibendum orci, sit amet pharetra odio facilisis scelerisque. Cras accumsan, lacus vitae laoreet lacinia, sem justo efficitur ligula, eu efficitur diam sapien ac massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ante lacus, auctor eu cursus et, eleifend nec felis. In aliquet ullamcorper nibh, id fermentum diam ullamcorper sit amet. Nam in metus et mi faucibus cursus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+	</main>
+
+	<h1 class="overlay-text">
+		QUISQUE SCELERISQUE
+	</h1>
+
 </body>
